[gd_scene load_steps=16 format=2]

[ext_resource path="res://script/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/pixels_background_shadow_light_bright_18497_1920x1080.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/SHPinscher-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.521569, 0.121569, 0.121569, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0 )
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 0.309804, 0.027451, 0.027451, 0.6 )
shadow_size = 2

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 30
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 110
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 110
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 110
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 110
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLab" type="Label" parent="."]
margin_left = 16.0
margin_right = 49.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSG" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0817
margin_top = 2.51061
margin_right = 1.08167
margin_bottom = 2.51062
custom_fonts/font = SubResource( 4 )
text = "Episode-1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MSGT" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 73.3024
margin_top = 10.6066
margin_right = 433.302
margin_bottom = 71.6066
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
custom_fonts/font = SubResource( 8 )
step = 0.1
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu1" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Menu1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.6032
margin_top = -195.079
margin_right = 100.399
margin_bottom = -56.0794
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0.564706, 0.392157, 0.392157, 1 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Menu1"]
anchor_left = 0.5
anchor_top = 0.502
anchor_right = 0.5
anchor_bottom = 0.502
margin_left = -147.482
margin_top = -74.6843
margin_right = 149.518
margin_bottom = 64.3157
custom_fonts/font = SubResource( 10 )
text = "Options"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Menu1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.3941
margin_top = 62.2061
margin_right = 82.606
margin_bottom = 202.206
custom_fonts/font = SubResource( 11 )
text = "Exit"
flat = true

[node name="Menu2" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0.815686, 0.254902, 0.254902, 1 )

[node name="Resume" type="Button" parent="Menu2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -187.245
margin_right = 138.0
margin_bottom = -48.245
custom_fonts/font = SubResource( 12 )
text = "Resume"
flat = true

[node name="Options" type="Button" parent="Menu2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -40.98
margin_right = 148.0
margin_bottom = 98.02
custom_fonts/font = SubResource( 10 )
text = "Options"
flat = true

[node name="Restart" type="Button" parent="Menu2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = 92.306
margin_right = 136.0
margin_bottom = 231.306
custom_fonts/font = SubResource( 11 )
text = "Restart"
flat = true

[node name="Menu3" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -958.318
margin_top = -540.0
margin_right = 961.682
margin_bottom = 540.0
color = Color( 0.815686, 0.254902, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="CheckButton" parent="Menu3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -180.66
margin_right = 146.0
margin_bottom = -39.66
custom_fonts/font = SubResource( 12 )
pressed = true
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="CheckButton" parent="Menu3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -23.31
margin_right = 150.0
margin_bottom = 117.69
custom_fonts/font = SubResource( 10 )
pressed = true
text = "Sound"

[node name="Kaydet" type="Button" parent="Menu3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = 133.489
margin_right = 109.0
margin_bottom = 272.489
custom_fonts/font = SubResource( 11 )
text = "Kaydet"
flat = true
[connection signal="timeout" from="MSGT" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="Menu1/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu1/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu1/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu2/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu2/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu2/Restart" to="." method="_on_Restart_pressed"]
[connection signal="toggled" from="Menu3/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="Menu3/Sound" to="." method="_on_Sound_toggled"]
[connection signal="pressed" from="Menu3/Kaydet" to="." method="_on_Kaydet_pressed"]
